# unitc

./: .gitignore  LICENSE  README.md  cunits.cabal  stack.yaml  unitc.cabal
app/: FindType.hs  FindUnit.hs  Main.hs  SymTab.hs  Type.hs  Unit.hs
app/Monad/: Analysis.hs
doc/examples/: bad1.c  bad2a.c  bad2b.c  bad2c.c  bad3a.c  bad3b.c  bad6a.c  bad6b.c  bad_arith_1.c  bad_arith_2.c  bad_conditional_1.c  bad_conditional_2.c  bad_fn_ptr.c  bad_label.c  bad_null.c  bad_poly_init.c  bad_redefine_1.c  bad_redefine_2.c  bad_redefine_3.c  bad_switch_case.c  bad_switch_cases.c  bad_switch_default.c  bad_typeof.c  example1.c  example2.c  example3.c  good1.c  good4.c  good5.c  good6.c  good7.c  good8.c  good_alignof.c  good_anonymous_struct_union.c  good_arith.c  good_array.c  good_asm.c  good_assignment_ops.c  good_bool.c  good_cast.c  (+39 more)
src/: Main.hs
src/App/: FindType.hs  FindUnit.hs  SymTab.hs  Type.hs  Unit.hs
src/App/Monad/: Analysis.hs
testsuite/: examples.sh  runtests.sh
