name:                unitc
version:             0.1.0.0
synopsis:            Dimensional analysis for the C programming language
-- description:         
homepage:            https://github.com/magnusjonsson/unitc
license:             BSD2
license-file:        LICENSE
author:              Magnus Jonsson
maintainer:          jmagnusj@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable unitc
  main-is:             Main.hs
  other-modules:
    App.FindType
    App.FindUnit
    App.Monad.Analysis
    App.SymTab
    App.Type
    App.Unit
  -- other-extensions:    
  build-depends:       base >=4.5 && <4.9, containers >=0.5.6.2, extra, language-c, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Werror
                       -fwarn-incomplete-patterns
                       -fwarn-dodgy-exports
                       -fwarn-dodgy-imports
--                       -fwarn-unused-matches
                       -fwarn-unused-imports
                       -fwarn-unused-binds
